--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form id="register" action="/register" method="post">
+    <form id="register" action="/register" method="get">
     <div class = "row">
         <div class="col-5">
             <img class="time" src="static/time.png">
