Update on the grid of the layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-light border" style="background-color: #D5D8DC">
+        <nav class="navbar navbar-expand-md navbar-light border" style="background-color: #D5F5E3">
             <a class="navbar-brand" href="/"><span class="blue">My</span><span class="red">Time</span><span class="yellow">My</span><span class="green">Responsibility</span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
