--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,5 +5,188 @@
 {% endblock %}
 
 {% block main %}
-    Here is the dashboard
+    <div class="row">
+        <div class="col-6">
+            <span id="welcome">Welcome back <b>{{ username }}</b></span><br>
+            <span id="message">Make <u><b><span id="date"></span></b></u> a <b>great</b> one!</span>
+        </div>
+        <div class="col-6">
+            <span id="score"> SCORE: </span>
+        </div>
+    </div>
+    <div id="first_row" class="row">
+        <div class="col-3">
+            <div class="time-control">
+                0800
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                0900
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1000
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1100
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t08" name="t0800" placeholder="Keep it simple and precise..."></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t09" name="t0900" placeholder="Eg: Breakfast + Exercise"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t10" name="t1000" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t11" name="t1100" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+    </div>
+    <div id="sec_row" class="row">
+        <div class="col-3">
+            <div class="time-control">
+                1200
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1300
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1400
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1500
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t12" name="t1200" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t13" name="t1300" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t14" name="t1400" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t15" name="t1500" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+    </div>
+    <div id="thid_row" class="row">
+        <div class="col-3">
+            <div class="time-control">
+                1600
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1700
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1800
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                1900
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t16" name="t1600" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t17" name="t1700" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t18" name="t1800" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t19" name="t1900" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+    </div>
+    <div id="fourth_row" class="row">
+        <div class="col-3">
+            <div class="time-control">
+                2000
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                2100
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="time-control">
+                2200
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t20" name="t2000" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t21" name="t2100" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group green-border">
+                <textarea class="form-control" id="t22" name="t2200" placeholder="Tasks"></textarea>
+            </div>
+        </div>
+    </div>
+    <script>
+        var d = new Date();
+        var date = d.getDate();
+        var month =  d.getMonth();
+        var year = d.getFullYear();
+        var dateString = year + "/" + (month+1) + "/" + date;
+        document.getElementById('date').innerHTML = dateString;
+    </script>
+
 {% endblock %}
