Changed the nav bar to have a planning bar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,14 +27,14 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-light border" style="background-color: #D5F5E3">
-            <a class="navbar-brand" href="/"><span class="blue">My</span><span class="red">Time</span><span class="yellow">My</span><span class="green">Responsibility</span></a>
+            <a class="navbar-brand" href="/dashboard"><span class="blue">My</span><span class="red">Time</span><span class="yellow">My</span><span class="green">Responsibility</span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/dashboard">Today</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/planning">Plan</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
