--- a/templates/planning.html
+++ b/templates/planning.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form id="dashboard" action="/planning" method="post">
+    <form id="planning" action="/planning" method="post">
         <div class="row">
             <div class="col-12">
                 <span id="welcome1">Hello <b>{{ username }}</b>,</span><br>
