Added placeholder to set the attribute of done or not done tasks and also javascript to handle the checkbox onclick to send a GET request using ajax

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -37,22 +37,26 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt0800" class="form-control">{{ rows['task1'] }}</textarea>
+                    <textarea {{rows['ta1']}} id="ta1" name="ta1" class="form-control">{{ rows['task1'] }}</textarea>
+                    <input id="cb1" type="checkbox" value="cb1" {{rows['cb1']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt0900" class="form-control">{{ rows['task2'] }}</textarea>
+                    <textarea {{rows['ta2']}} id="ta2" name="ta2" class="form-control">{{ rows['task2'] }}</textarea>
+                    <input id="cb2" type="checkbox" value="cb2" {{rows['cb2']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1000" class="form-control">{{ rows['task3'] }}</textarea>
+                    <textarea {{rows['ta3']}} id="ta3" name="ta3" class="form-control">{{ rows['task3'] }}</textarea>
+                    <input id="cb3" type="checkbox" value="cb3" {{rows['cb3']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1100" class="form-control">{{ rows['task4'] }}</textarea>
+                    <textarea {{rows['ta4']}} id="ta4" name="ta4" class="form-control">{{ rows['task4'] }}</textarea>
+                    <input id="cb4" type="checkbox" value="cb4" {{rows['cb4']}}/>
                 </div>
             </div>
         </div>
@@ -81,22 +85,26 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1200" class="form-control">{{ rows['task5'] }}</textarea>
+                    <textarea {{rows['ta5']}} id="ta5" name="ta5" class="form-control">{{ rows['task5'] }}</textarea>
+                    <input id="cb5" type="checkbox" value="cb5" {{rows['cb5']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1300" class="form-control">{{ rows['task6'] }}</textarea>
+                    <textarea {{rows['ta6']}} id="ta6" name="ta6" class="form-control">{{ rows['task6'] }}</textarea>
+                    <input id="cb6" type="checkbox" value="cb6" {{rows['cb6']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1400" class="form-control">{{ rows['task7'] }}</textarea>
+                    <textarea {{rows['ta7']}} id="ta7" name="ta7" class="form-control">{{ rows['task7'] }}</textarea>
+                    <input id="cb7" type="checkbox" value="cb7" {{rows['cb7']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1500" class="form-control">{{ rows['task8'] }}</textarea>
+                    <textarea {{rows['ta8']}} id="ta8" name="ta8" class="form-control">{{ rows['task8'] }}</textarea>
+                    <input id="cb8" type="checkbox" value="cb8" {{rows['cb8']}}/>
                 </div>
             </div>
         </div>
@@ -125,22 +133,26 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1600" class="form-control">{{ rows['task9'] }}</textarea>
+                    <textarea {{rows['ta9']}} id="ta9" name="ta9" class="form-control">{{ rows['task9'] }}</textarea>
+                    <input id="cb9" type="checkbox" value="cb9" {{rows['cb9']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1700" class="form-control">{{ rows['task10'] }}</textarea>
+                    <textarea {{rows['ta10']}} id="ta10" name="ta10" class="form-control">{{ rows['task10'] }}</textarea>
+                    <input id="cb10" type="checkbox" value="cb10" {{rows['cb10']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1800" class="form-control">{{ rows['task11'] }}</textarea>
+                    <textarea {{rows['ta11']}} id="ta11" name="ta11" class="form-control">{{ rows['task11'] }}</textarea>
+                    <input id="cb11" type="checkbox" value="cb11" {{rows['cb11']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt1900" class="form-control">{{ rows['task12'] }}</textarea>
+                    <textarea {{rows['ta12']}} id="ta12" name="ta12" class="form-control">{{ rows['task12'] }}</textarea>
+                    <input id="cb12" type="checkbox" value="cb12" {{rows['cb12']}}/>
                 </div>
             </div>
         </div>
@@ -164,23 +176,27 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt2000" class="form-control">{{ rows['task13'] }}</textarea>
+                    <textarea {{rows['ta13']}} id="ta13" name="ta13" class="form-control">{{ rows['task13'] }}</textarea>
+                    <input id="cb13" type="checkbox" value="cb13" {{rows['cb13']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt2100" class="form-control">{{ rows['task14'] }}</textarea>
+                    <textarea {{rows['ta14']}} id="ta14" name="ta14" class="form-control">{{ rows['task14'] }}</textarea>
+                    <input id="cb14" type="checkbox" value="cb14" {{rows['cb14']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group green-border">
-                    <textarea name="tt2200" class="form-control">{{ rows['task15'] }}</textarea>
+                    <textarea {{rows['ta15']}} id="ta15" name="ta15" class="form-control">{{ rows['task15'] }}</textarea>
+                    <input id="cb15" type="checkbox" value="cb15" {{rows['cb15']}}/>
                 </div>
             </div>
             <div class="col-3">
                 <button class="btn btn-primary btn-lg" type="submit">Update your day</button> 
         </div>
     </form>
+
     <script>
         var d = new Date();
         var date = d.getDate();
@@ -188,5 +204,96 @@
         var year = d.getFullYear();
         var dateString = year + "/" + (month+1) + "/" + date;
         document.getElementById('date').innerHTML = dateString;
+        
+        document.getElementById('cb1').addEventListener('click', function() {
+            var textArea = document.getElementById('ta1')
+            $.get("/check?condition=" + document.getElementById('cb1').checked + '&id=' + document.getElementById('cb1').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb2').addEventListener('click', function() {
+            var textArea = document.getElementById('ta2')
+            $.get("/check?condition=" + document.getElementById('cb2').checked + '&id=' + document.getElementById('cb2').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb3').addEventListener('click', function() {
+            var textArea = document.getElementById('ta3')
+            $.get("/check?condition=" + document.getElementById('cb3').checked + '&id=' + document.getElementById('cb3').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb4').addEventListener('click', function() {
+            var textArea = document.getElementById('ta4')
+            $.get("/check?condition=" + document.getElementById('cb4').checked + '&id=' + document.getElementById('cb4').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb5').addEventListener('click', function() {
+            var textArea = document.getElementById('ta5')
+            $.get("/check?condition=" + document.getElementById('cb5').checked + '&id=' + document.getElementById('cb5').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb6').addEventListener('click', function() {
+            var textArea = document.getElementById('ta6')
+            $.get("/check?condition=" + document.getElementById('cb6').checked + '&id=' + document.getElementById('cb6').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb7').addEventListener('click', function() {
+            var textArea = document.getElementById('ta7')
+            $.get("/check?condition=" + document.getElementById('cb7').checked + '&id=' + document.getElementById('cb7').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb8').addEventListener('click', function() {
+            var textArea = document.getElementById('ta8')
+            $.get("/check?condition=" + document.getElementById('cb8').checked + '&id=' + document.getElementById('cb8').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb9').addEventListener('click', function() {
+            var textArea = document.getElementById('ta9')
+            $.get("/check?condition=" + document.getElementById('cb9').checked + '&id=' + document.getElementById('cb9').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb10').addEventListener('click', function() {
+            var textArea = document.getElementById('ta10')
+            $.get("/check?condition=" + document.getElementById('cb10').checked + '&id=' + document.getElementById('cb10').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb11').addEventListener('click', function() {
+            var textArea = document.getElementById('ta11')
+            $.get("/check?condition=" + document.getElementById('cb11').checked + '&id=' + document.getElementById('cb11').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb12').addEventListener('click', function() {
+            var textArea = document.getElementById('ta12')
+            $.get("/check?condition=" + document.getElementById('cb12').checked + '&id=' + document.getElementById('cb12').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb13').addEventListener('click', function() {
+            var textArea = document.getElementById('ta13')
+            $.get("/check?condition=" + document.getElementById('cb13').checked + '&id=' + document.getElementById('cb13').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb14').addEventListener('click', function() {
+            var textArea = document.getElementById('ta14')
+            $.get("/check?condition=" + document.getElementById('cb14').checked + '&id=' + document.getElementById('cb14').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
+        document.getElementById('cb15').addEventListener('click', function() {
+            var textArea = document.getElementById('ta15')
+            $.get("/check?condition=" + document.getElementById('cb15').checked + '&id=' + document.getElementById('cb15').value + '&ta=' + textArea.name)
+            textArea.readOnly = this.checked;
+        });
+
     </script>
 {% endblock %}
